CHATS_SIT/force-app/main/default/objects/T_APPLN_CUST__c.object
<CustomObject>
    <description>PEAK application custody information</description>
    <fields>
        <fullName>CDE_IMM_TYPE__c</fullName>
        <description>CDE_IMM_TYPE</description>
        <label>CDE_IMM_TYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_HEAD_START__c</fullName>
        <description>DTE_BEGIN_HEAD_START</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BEGIN_HEAD_START</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_FOSTER__c</fullName>
        <description>DTE_FOSTER</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_FOSTER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_JOINT_CUST__c</fullName>
        <description>DTE_JOINT_CUST</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_JOINT_CUST</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_CUST__c</fullName>
        <label>IDN_APPLN_CUST</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Custodies</relationshipLabel>
        <relationshipName>Application_Custodies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_CC_REQ__c</fullName>
        <description>IND_CC_REQ</description>
        <label>IND_CC_REQ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FOSTER__c</fullName>
        <description>IND_FOSTER</description>
        <label>IND_FOSTER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_HEAD_START__c</fullName>
        <description>IND_HEAD_START</description>
        <label>IND_HEAD_START</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_JOINT_CUST__c</fullName>
        <description>IND_JOINT_CUST</description>
        <label>IND_JOINT_CUST</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Custody</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACUST-{0}</displayFormat>
        <label>Application Custody ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Custodies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>